--- a/Tools/CMakeLists.txt
+++ b/Tools/CMakeLists.txt
@@ -16,6 +16,8 @@ IF ("${PORT}" STREQUAL "Efl")
     ADD_SUBDIRECTORY(DumpRenderTree/TestNetscapePlugIn)
 ELSEIF ("${PORT}" STREQUAL "WinCE")
     ADD_SUBDIRECTORY(WinCELauncher)
+ELSEIF ("${PORT}" STREQUAL "Nix")
+    ADD_SUBDIRECTORY(MiniBrowser/nix)
 ENDIF()
 
 IF (ENABLE_WEBKIT2 AND ENABLE_API_TESTS)
