Use only PLATFORM(NIX)
To aid the bootstrapping, Nix were also defining PLATFORM(EFL). This is not
needed anymore. This patch removes the extra definition and fixes the build.

Reviewed by: Jesus Sanchez-Palencia, Rafael Brandão

--- a/Source/WebKit2/UIProcess/WebPageProxy.messages.in
+++ b/Source/WebKit2/UIProcess/WebPageProxy.messages.in
@@ -79,7 +79,7 @@ messages -> WebPageProxy {
     ProxyAuthenticationRequiredRequest(WTF::String hostname, uint16_t port, WTF::String prefilledUsername) -> (WTF::String username, WTF::String password)
 #endif
 
-#if PLATFORM(QT) || PLATFORM(EFL)
+#if PLATFORM(QT) || PLATFORM(EFL) || PLATFORM(NIX)
     DidChangeContentsSize(WebCore::IntSize newSize)
 #endif
 
